TOTP - Authenticator https://tools.ietf.org/html/rfc6238 https://www.idontplaydarts.com/2011/07/google-totp-two-factor-authentication-for-php/

--- a/Resources/config/security_factories.yml
+++ b/Resources/config/security_factories.yml
@@ -4,3 +4,7 @@ services:
         class:  Dayspring\PBKDF2Bundle\DependencyInjection\Security\Factory\PBKDF2Factory
         tags:
             - { name: security.listener.factory }
+    security.authentication.factory.totp:
+        class:  Dayspring\PBKDF2Bundle\DependencyInjection\Security\Factory\TOTPFactory
+        tags:
+            - { name: security.listener.factory }
